[package]
name = "windup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rc-zip = "2.0.1"
reqwest = { version = "0.11.18", features = ["blocking"] }
roxmltree = "0.18.0"
tokio = { version = "1.29.1", features = ["full"] }
